force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <label>Job Posting</label>
    <nameField>
        <label>Job Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>