force-app/main/default/objects/Job_Posting__c/fields/Applications_In_Interview__c.field-meta.xml
<CustomField>
    <fullName>Applications_In_Interview__c</fullName>
    <label>Applications In Interview</label>
    <summaryFilterItems>
        <field>Application__c.Stage__c</field>
        <operation>equals</operation>
        <value>Interview</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>