force-app/main/default/objects/Job_Posting__c/fields/Job_Posting_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Job_Posting_External_Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>